[gd_scene load_steps=4 format=3 uid="uid://vvf0i2c1wen4"]

[ext_resource type="Script" path="res://Scenes/raycast_scene.gd" id="1_ukbsf"]
[ext_resource type="ArrayMesh" uid="uid://daf8xl4bjsktl" path="res://Models/neko.obj" id="2_37ovs"]
[ext_resource type="Material" uid="uid://brp4d1pw3dkpv" path="res://Models/neko_mat.tres" id="3_snmx3"]

[node name="RaycastScene" type="Node3D"]
script = ExtResource("1_ukbsf")
collision_type = 1

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = ExtResource("2_37ovs")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_snmx3")

[node name="AzimuthTurntable" type="Node3D" parent="."]

[node name="ElevationTurntable" type="Node3D" parent="AzimuthTurntable"]

[node name="RayCamera3D" type="Camera3D" parent="AzimuthTurntable/ElevationTurntable"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
fov = 40.0
